--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/sha1": "^1.1.1",
+    "@material-ui/core": "^3.3.1",
+    "@material-ui/icons": "^3.0.1",    
+    "buffer-to-arraybuffer": "^0.0.5",
     "kad-rtc": "git+ssh://git@bitbucket.org/shinyoshiaki/kad-rtc.git#bson",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-scripts-ts": "3.1.0",
     "recordrtc": "^5.4.8",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "to-array-buffer": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -20,7 +23,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
-    "@types/react": "^16.4.16",
+    "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "typescript": "^3.1.2"
   }
